04-vpcs/ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: This is a CFN template to create VPCs for Lab 4.
Parameters:
  TagUser:
    Type: String
  TagLesson:
    Type: String
  TagLab:
    Type: String
  AMI:
    Type: String
  InstanceType:
    Type: String
  KeyName:
    Type: String
Resources:
  EC2:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: {"Fn::ImportValue" : {"Fn::Sub" : "Zach-Lab4-SubnetID"}}
      Tags:  
        - Key: user
          Value: !Ref TagUser
        - Key: stelligent-u-lesson
          Value: !Ref TagLesson
        - Key: stelligent-u-lab
          Value: !Ref TagLab
        - Key: Name
          Value: !Ref TagUser
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - "#!/bin/bash\n"
            - "curl www.google.com \n"
    DependsOn:
      - SecurityGroup
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: SecurityGroup
      GroupName: ZachSG
      SecurityGroupIngress:
        - IpProtocol: ICMP
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: TCP
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:  
        - Key: user
          Value: !Ref TagUser
        - Key: stelligent-u-lesson
          Value: !Ref TagLesson
        - Key: stelligent-u-lab
          Value: !Ref TagLab
      VpcId: {"Fn::ImportValue" : {"Fn::Sub" : "Zach-Lab4-VPCID"}}
  EIP:
    Type: AWS::EC2::EIP
    Properties: 
      InstanceId: !Ref EC2
      Tags: 
        - Key: user
          Value: !Ref TagUser
        - Key: stelligent-u-lesson
          Value: !Ref TagLesson
        - Key: stelligent-u-lab
          Value: !Ref TagLab
Outputs:
  InstanceID:
    Description: InstanceID
    Value: !Ref EC2
  PrivateIP:
    Description: PrivateIP
    Value: !GetAtt  EC2.PrivateIp
